--- a/composer.json
+++ b/composer.json
@@ -14,13 +14,14 @@
         }
     ],
     "require": {
-        "guzzlehttp/guzzle": "^6.3",
-        "sabre/xml": "1.5.0",
-        "sabre/uri": "1.2.0",
-        "eluceo/ical": "^0.15.0"
+        "guzzlehttp/guzzle": "^7.5",
+        "sabre/xml": "^4.0",
+        "sabre/uri": "^3.0.0",
+        "eluceo/ical": "^0.17.0",
+        "php": "^8.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.7"
+        "phpunit/phpunit": "^9.0"
     },
     "autoload": {
         "psr-4": {
